--- a/game-zone-hh5-6.html
+++ b/game-zone-hh5-6.html
@@ -182,6 +182,23 @@
 
     
 
+             <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Outreach360 Word Board</h3>
+              <p>A versatile card workspace for language learning. Select specific cards or deal random ones to practice articles, plurals, counting, tenses, parts of speech, and other <strong>grammar skills</strong>; run <strong>sorting</strong> activities; and spark <strong>story building</strong>. Custom text and image cards make it easy to tailor lessons to your class. <strong>The built-in library covers most vocabulary from Hand in Hand 1–6 and Oxford Discover 1–2, plus selections from Oxford Discover 3 and even more!</strong> Great for flexible curriculum alignment and building vocabulary.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/word-board-icon.png?raw=true"
+                  alt="Outreach360 Word Board icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-wordboard.netlify.app" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
        
         <article class="card">
           <div class="body">
@@ -936,6 +953,7 @@
 
 </body>
 </html>
+
 
 
 
