--- a/game-zone-hh5-6.html
+++ b/game-zone-hh5-6.html
@@ -182,11 +182,11 @@
 
     
 
-         <article class="card">
+          <article class="card">
           <div class="body">
             <div class="text">
               <h3>Outreach360 Word Board</h3>
-              <p>A versatile card workspace for language learning. Select specific cards or deal random ones to practice articles, plurals, counting, tenses, parts of speech, and other <strong>grammar skills</strong>; run <strong>sorting</strong> activities; <strong>play games</strong>, and spark <strong>story building</strong>. Custom text and image cards make it easy to tailor lessons to your class. <strong>The built-in library covers most vocabulary from Hand in Hand 1–6 and Oxford Discover 1–2, plus selections from Oxford Discover 3 and even more!</strong> Great for flexible curriculum alignment and building vocabulary.</p>
+              <p>A versatile card workspace. Select specific cards or random ones to practice vocabulary and grammar, run sorting activities, play games, and spark story building. The built-in library covers most vocabulary from Hand in Hand 1–6 and Oxford Discover 1–2, plus selections from Oxford Discover 3 and even more! While it does not align to BrainPOP, you can copy and paste the image cards from BrainPOP’s Word Play activity. Great for flexible curriculum alignment with endless possibilities!</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -953,6 +953,7 @@
 
 </body>
 </html>
+
 
 
 
