--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -165,7 +165,7 @@
           <div class="body">
             <div class="text">
               <h3>Outreach360 Word Board</h3>
-              <p>A versatile card workspace. Select specific cards or random ones to practice vocabulary and grammar, run sorting activities, play games, and spark story building. The built-in library covers most vocabulary from Hand in Hand 1–6 and Oxford Discover 1–2, plus selections from Oxford Discover 3 and even more! While it does not align to BrainPOP, you can copy and paste the image cards from BrainPOP’s Word Play activity. Great for flexible curriculum alignment with endless possibilities!</p>
+              <p>A versatile card workspace. Select specific cards or random ones to practice vocabulary and grammar, run sorting activities, play games, and spark story building. The built-in library covers most vocabulary from Hand in Hand 1–6 and <strong>Oxford Discover 1–2, plus selections from Oxford Discover 3</strong> and even more! Add custom text and image cards for further practice. Great for flexible curriculum alignment with endless possibilities!</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1380,6 +1380,7 @@
 
 </body>
 </html>
+
 
 
 
