--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -183,7 +183,7 @@
           <div class="body">
             <div class="text">
               <h3>Picture Party 1</h3>
-              <p>Spin for a picture and use one of the suggested activities (located below the notes box) to practice vocabulary, grammar, speaking, writing, and creativity! <strong>Best suited for Oxford Discover 1-2</strong></p>
+              <p>Spin for a picture and use one of the suggested activities (located below the notes box) to practice vocabulary, grammar, speaking, writing, and creativity! <strong>Best suited for Oxford Discover 1-2.</strong></p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1380,6 +1380,7 @@
 
 </body>
 </html>
+
 
 
 
