--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -185,7 +185,7 @@
           <div class="body">
             <div class="text">
               <h3>Outreach360 Word Board</h3>
-              <p>A versatile card workspace. Select specific cards or random ones to practice vocabulary and grammar, run sorting activities, play games, and spark story building. The built-in library covers most vocabulary from <strong>Hand in Hand 1–6</strong> and Oxford Discover 1–2, plus selections from Oxford Discover 3 and even more! <strong>While it does not align to BrainPOP, you can copy and paste the image cards from BrainPOP’s Word Play activity and add custom text</strong>. Great for flexible curriculum alignment with endless possibilities!</p>
+              <p>A versatile card workspace. Select specific cards or random ones to practice vocabulary and grammar, run sorting activities, play games, and spark story building. The built-in library covers most vocabulary from <strong>Hand in Hand 1–6</strong> and Oxford Discover 1–2, plus selections from Oxford Discover 3 and even more! <strong>While it does not align to BrainPOP, you can copy and paste the images from BrainPOP’s Word Play activity and add custom text</strong>. Great for flexible curriculum alignment with endless possibilities!</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -766,6 +766,7 @@
 
 </body>
 </html>
+
 
 
 
