--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -384,7 +384,26 @@
                                <a href="https://drive.google.com/drive/folders/1MarYnf6LypvPZWXxxh-7jco3b57Rrxjc?usp=drive_link" target="_blank"><button class="play-btn">Scope & Sequence</button></a>
             </div>
           </div>
-        </article>           
+        </article>        
+
+
+                                              <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Listen & Draw</h3>
+              <p>The teacher describes an object, scene, or character. Students listen carefully and draw what they hear, then everyone shares their drawings. Use it to review vocabulary and concepts from previous lessons, such as shapes, colors, numbers, prepositions of place, appearance, etc. Great for practicing listening skills!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/listen-draw-icon.png?raw=true"
+                  alt="Listen & Draw icon"
+                  loading="lazy" decoding="async">
+              </div>
+                              <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>    
                                                 
         <article class="card">
           <div class="body">
@@ -766,6 +785,7 @@
 
 </body>
 </html>
+
 
 
 
