--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -404,6 +404,25 @@
             </div>
           </div>
         </article>    
+
+
+                 <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Describe & Draw</h3>
+              <p>Spin for a picture, right-click and copy it, and send it privately to one student. That student describes the picture as clearly as possible while everyone else draws. Depending on your rules and student level, the speaker can explain what’s in the picture or give step-by-step drawing directions using shapes and positions. Afterward, everyone shows their drawings and compares them to the original. A fun way to build speaking and listening skills!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/describe-draw-icon.png?raw=true"
+                  alt="Describe & Draw icon"
+                  loading="lazy" decoding="async">
+              </div>
+                         <a href="https://outreach360-inc.github.io/games/describe-draw.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>    
                                                 
         <article class="card">
           <div class="body">
@@ -785,6 +804,7 @@
 
 </body>
 </html>
+
 
 
 
