--- a/game-zone-hh5-6.html
+++ b/game-zone-hh5-6.html
@@ -598,7 +598,45 @@
                       <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
             </div>
           </div>
-        </article>           
+        </article> 
+
+
+                             <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Describe & Draw</h3>
+              <p>Spin for a picture, right-click and copy it, then send it privately to one student. That student describes the picture as clearly as possible while everyone else draws. Depending on your rules and student level, the speaker can explain what’s in the picture or give step-by-step drawing directions using shapes and positions. Afterward, everyone shows their drawings and compares them to the original. A fun way to build speaking and listening skills!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/describe-draw-icon.png?raw=true"
+                  alt="Describe & Draw icon"
+                  loading="lazy" decoding="async">
+              </div>
+                         <a href="https://outreach360-inc.github.io/games/describe-draw.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>   
+
+
+                                                          <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Listen & Draw</h3>
+              <p>The teacher describes an object, scene, or character. Students listen carefully and draw what they hear, then everyone shares their drawings. Use it to review vocabulary and concepts from previous lessons, such as shapes, colors, numbers, prepositions of place, appearance, etc. Great for practicing listening skills!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/listen-draw-icon.png?raw=true"
+                  alt="Listen & Draw icon"
+                  loading="lazy" decoding="async">
+              </div>
+                              <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>    
 
                   <article class="card">
           <div class="body">
@@ -953,6 +991,7 @@
 
 </body>
 </html>
+
 
 
 
