--- a/game-zone-hh5-6.html
+++ b/game-zone-hh5-6.html
@@ -624,7 +624,7 @@
           <div class="body">
             <div class="text">
               <h3>Listen & Draw</h3>
-              <p>The teacher describes an object, scene, or character. Students listen carefully and draw what they hear, then everyone shares their drawings. Use it to review vocabulary and concepts from previous lessons, such as shapes, colors, numbers, prepositions of place, appearance, etc. Great for practicing listening skills!</p>
+              <p>The teacher describes an object, scene, or character. Students listen carefully and draw what they hear, then everyone shares their drawings. Use it to review vocabulary and concepts from previous lessons. Great for practicing listening skills!</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -991,6 +991,7 @@
 
 </body>
 </html>
+
 
 
 
