--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -1053,6 +1053,24 @@
           </div>
         </article>
 
+                                         <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Describe & Draw</h3>
+              <p>Spin for a picture, right-click and copy it, then send it privately to one student. That student gives clear, step-by-step drawing instructions without revealing what the image actually is. Afterward, everyone shows their drawings and compares them to the original. A fun way to build speaking and listening skills!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/describe-draw-icon.png?raw=true"
+                  alt="Describe & Draw icon"
+                  loading="lazy" decoding="async">
+              </div>
+                         <a href="https://outreach360-inc.github.io/games/describe-draw.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>   
+
                   <article class="card">
           <div class="body">
             <div class="text">
@@ -1548,6 +1566,7 @@
 
 </body>
 </html>
+
 
 
 
