--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -469,7 +469,24 @@
         </article>
 
 
-            
+                       <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Perspectives 1</h3>
+              <p>A spin-and-go storytelling game that builds empathy and voice. Each spin serves up a situation, the characters involved, and a creative task. Students step into different points of view to speak, write, or improvise the scene. Great for strengthening communication, critical thinking, creativity.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/perspectives1-icon.png?raw=true"
+                  alt="Perspectives 1 icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="http://outreach360-inc.github.io/games/perspectives1.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
             
                                             <article class="card">
           <div class="body">
@@ -1418,6 +1435,7 @@
 
 </body>
 </html>
+
 
 
 
