--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -473,7 +473,7 @@
           <div class="body">
             <div class="text">
               <h3>Perspectives 1</h3>
-              <p>A spin-and-go storytelling game that builds empathy and voice. Each spin serves up a situation, the characters involved, and a creative task. Students step into different points of view to speak, write, or improvise the scene. Great for strengthening communication, critical thinking, creativity.</p>
+              <p>A spin-and-go storytelling game that builds empathy and voice. Each spin serves up a situation, the characters involved, and a creative task. Before jumping in, students can briefly discuss the vague prompt to agree on the story’s key facts (who, what, where, when, why). Then they step into different points of view to speak, write, or improvise the scene. For a twist, have the students brainstorm their own character ideas to match the situation. Great for strengthening communication, critical thinking, and creativity.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1435,6 +1435,7 @@
 
 </body>
 </html>
+
 
 
 
