--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -220,17 +220,17 @@
                  <article class="card">
           <div class="body">
             <div class="text">
-              <h3>What Is It?</h3>
-              <p>Show students close-up, cropped, or unusual photos of everyday things. They guess what the object is, describing what they see (“It looks like metal,” “Maybe it’s a coin”). Use your own phots or the ones provided. Great for warm-ups!</p>
+              <h3>Mystery Picture</h3>
+              <p>Spin for a picture, then move your cursor over the black space to spotlight parts of the picture. Students guess what it is, describing what they see (“It looks like metal,” “Maybe it’s a coin”). Great for warm-ups!</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
                 <img
                   src="https://github.com/Outreach360-Inc/games/blob/main/what-is-it-icon.png?raw=true"
-                  alt="What Is It? icon"
+                  alt="Mystery Picture icon"
                   loading="lazy" decoding="async">
               </div>
-              <a href="https://learnenglishteens.britishcouncil.org/study-break/photo-zone/what-it?page=0" target="_blank"><button class="play-btn">PLAY</button></a>
+              <a href="https://outreach360-inc.github.io/games/mystery-picture.html" target="_blank"><button class="play-btn">PLAY</button></a>
             </div>
           </div>
         </article>
@@ -1435,6 +1435,7 @@
 
 </body>
 </html>
+
 
 
 
