--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -221,7 +221,7 @@
           <div class="body">
             <div class="text">
               <h3>Mystery Picture</h3>
-              <p>Spin for a picture, then move your cursor over the black space to spotlight parts of the picture. Students guess what it is, describing what they see (“It looks like metal,” “Maybe it’s a coin”). Great for warm-ups!</p>
+              <p>Spin for a picture, then move your cursor over the black space to spotlight parts it. Students guess what the picture is, describing what they see (“It looks like metal,” “Maybe it’s a coin”). Great for warm-ups!</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1435,6 +1435,7 @@
 
 </body>
 </html>
+
 
 
 
