--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -255,6 +255,25 @@
           </div>
         </article>
 
+               <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Mystery Picture</h3>
+              <p>Spin for a mystery picture, then move your cursor over the black area to spotlight parts of it. Students describe what they notice and guess what the picture is (e.g., “It looks metallic — maybe it’s a coin”). For lower levels, preview the picture before class and scaffold with sentence starters (“I see…,” “It looks like…,” “Maybe it’s…”) and a small visual word bank (e.g., shiny, round—each paired with a simple icon or photo). Great for warm-ups!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/what-is-it-icon.png?raw=true"
+                  alt="Mystery Picture icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-inc.github.io/games/mystery-picture.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
+
 
                     <article class="card">
           <div class="body">
@@ -804,6 +823,7 @@
 
 </body>
 </html>
+
 
 
 
