--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -198,6 +198,24 @@
           </div>
         </article>
 
+                    <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Mystery Picture</h3>
+              <p>Spin for a mystery picture, then move your cursor over the black area to spotlight parts of it. Students describe what they notice and guess what the picture is (e.g., “It looks metallic — maybe it’s a coin”). Great for warm-ups!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/what-is-it-icon.png?raw=true"
+                  alt="Mystery Picture icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-inc.github.io/games/mystery-picture.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
                  <article class="card">
           <div class="body">
             <div class="text">
@@ -1585,6 +1603,7 @@
 
 </body>
 </html>
+
 
 
 
