--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -410,7 +410,7 @@
           <div class="body">
             <div class="text">
               <h3>Story Bingo 2</h3>
-              <p>First, the teacher should choose a story from <a href="https://www.commonlit.org/" target="_blank">CommonLit.org</a> for students to read. Use the board afterward as a <strong>post-reading reflection</strong> (individual or pair work), or as a <strong>group challenge or class competition</strong>. Each time the page loads, it generates a unique, randomized board so students get their own version. Great for reading comprehension, story elements, and interactive analysis.</p>
+              <p>First, the teacher should choose a story from <a href="https://www.commonlit.org/" target="_blank">CommonLit.org</a>(you will need to create a free account) for students to read. Use the board afterward as a <strong>post-reading reflection</strong> (individual or pair work), or as a <strong>group challenge or class competition</strong>. Each time the page loads, it generates a unique, randomized board so students get their own version. Great for reading comprehension, story elements, and interactive analysis.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1603,6 +1603,7 @@
 
 </body>
 </html>
+
 
 
 
