--- a/story-bingo1.html
+++ b/story-bingo1.html
@@ -98,7 +98,7 @@
     <h1>Story Bingo 1</h1>
 
 <button id="print-btn" onclick="generatePDF()">💾 Save Your Work</button>
-<p style="font-size: 14px; margin-top: 6px;"><em>Your bingo board will appear on page 1. Your complete answers will be listed on page 2 and beyond.</em></p>
+<p style="font-size: 14px; margin-top: 6px;"><em>Your board will appear on page 1. Your complete answers will be listed on page 2 and beyond.</em></p>
 
     <div class="bingo-board" id="bingo-board"></div>
     <script>
