--- a/story-bingo2.html
+++ b/story-bingo2.html
@@ -97,7 +97,7 @@ justify-content: center;
 <body>
     <h1>Story Bingo 2</h1>
 <button id="print-btn" onclick="generatePDF()">💾 Save Your Work</button>
-<p style="font-size: 14px; margin-top: 6px;"><em>Your bingo board will appear on page 1. Your complete answers will be listed on page 2 and beyond.</em></p>
+<p style="font-size: 14px; margin-top: 6px;"><em>Your board will appear on page 1. Your complete answers will be listed on page 2 and beyond.</em></p>
     <div class="bingo-board" id="bingo-board"></div>
 
     <script>
