--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -259,7 +259,7 @@
           <div class="body">
             <div class="text">
               <h3>Mystery Picture</h3>
-              <p>Spin for a mystery picture, then move your cursor over the black area to spotlight parts of it. Students describe what they notice and guess what the picture is (e.g., “It looks metallic — maybe it’s a coin”). <strong>For lower levels, preview the picture before class and scaffold with sentence starters (“I see…,” “It looks like…,” “Maybe it’s…”) and a small visual word bank (e.g., shiny, round—each paired with a simple icon or photo).</strong> Great for warm-ups!</p>
+              <p>Spin for a mystery picture, then move your cursor over the black area to spotlight parts of it. Students describe what they notice and guess what the picture is (e.g., “It looks metallic — maybe it’s a coin”). <strong>For lower levels, preview the picture before class and create a word bank (e.g., shiny, round—with matching icons or Spanish translations) and sentence starters. Toggle between Mystery Picture and your language support as needed.</strong> Great for warm-ups!</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -823,6 +823,7 @@
 
 </body>
 </html>
+
 
 
 
