--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -235,7 +235,25 @@
           </div>
         </article>
 
+         <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Joke Decoder</h3>
+              <p>Spin to get a meme or pun. Students explain why it’s funny, fix any grammar or spelling, try writing new captions or puns, or share how it connects to their life. Great for a quick warm-up that builds speaking confidence and introduces new vocabulary!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/joke-decoder-icon.png?raw=true"
+                  alt="Joke Decoder icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-inc.github.io/games/joke-decoder.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
 
+            
         <article class="card">
           <div class="body">
             <div class="text">
@@ -1435,6 +1453,7 @@
 
 </body>
 </html>
+
 
 
 
