--- a/game-zone-hh5-6.html
+++ b/game-zone-hh5-6.html
@@ -295,7 +295,26 @@
           </div>
         </article>
 
-                              <article class="card">
+
+      <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Whacky Role Plays</h3>
+              <p>Spin for silly scene ideas—use as many as you like! Students act out short, fun role plays based on the prompts. Encourage creativity, exaggeration, and improv. Great for speaking fluency, teamwork, and lots of laughs!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/whacky-role-plays-icon.png?raw=true"
+                  alt="Whacky Role Plays icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-inc.github.io/games/whacky-role-plays.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
+                                          <article class="card">
           <div class="body">
             <div class="text">
               <h3>Yes-And Improv</h3>
@@ -309,24 +328,6 @@
                   loading="lazy" decoding="async">
               </div>
               <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
-            </div>
-          </div>
-        </article>
-
-      <article class="card">
-          <div class="body">
-            <div class="text">
-              <h3>Whacky Role Plays</h3>
-              <p>Spin all for silly scene ideas—use as many as you like! Students act out short, fun role plays based on the prompts. Encourage creativity, exaggeration, and improv. Great for speaking fluency, teamwork, and lots of laughs!</p>
-            </div>
-            <div class="art-col">
-              <div class="art-frame">
-                <img
-                  src="https://github.com/Outreach360-Inc/games/blob/main/whacky-role-plays-icon.png?raw=true"
-                  alt="Whacky Role Plays icon"
-                  loading="lazy" decoding="async">
-              </div>
-              <a href="https://outreach360-inc.github.io/games/whacky-role-plays.html" target="_blank"><button class="play-btn">PLAY</button></a>
             </div>
           </div>
         </article>
@@ -1025,6 +1026,7 @@
 
 </body>
 </html>
+
 
 
 
