--- a/joke-decoder.html
+++ b/joke-decoder.html
@@ -4,6 +4,11 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Joke Decoder</title>
+  <meta content="noindex, nofollow" name="robots"/>
+<link rel="icon" type="image/png" sizes="32x32"
+      href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
+<link rel="icon" type="image/png" sizes="16x16"
+      href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
 <style>
   :root { --bg:#0b0b0c; --card:#ffffff; --ink:#0f172a; --ink-soft:#64748b; --accent:#2563eb; --accent-ink:#ffffff; --ring:rgba(37,99,235,.25); }
   * { box-sizing: border-box; }
