--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -293,6 +293,25 @@
           </div>
         </article>
 
+
+                                <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>GIF Story</h3>
+              <p>Find at least one appropriate GIF online prior to class. Students invent who, when, where, what, why and tell a short story out loud. Great for quick, creative, speaking practice!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/gif-story-icon.png?raw=true"
+                  alt="GIF Story icon"
+                  loading="lazy" decoding="async">
+              </div>
+               <p style="color: #ff6729;" align="center"><strong>YOU WILL NEED TO FIND YOUR OWN MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
+
             
         <article class="card">
           <div class="body">
@@ -823,6 +842,7 @@
 
 </body>
 </html>
+
 
 
 
