--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -255,6 +255,24 @@
           </div>
         </article>
 
+                   <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Spot the Difference</h3>
+              <p>Show two almost-identical images, and students describe what’s changed—objects, colors, numbers, or positions—using full sentences. Great for target language like there is/are, prepositions, etc.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/spot-difference-icon.png?raw=true"
+                  alt="Spot the Difference icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://www.champak.in/puzzles/spot-the-difference?srsltid=AfmBOorI1PjyMpao9R_t8EAE2rDNO6F5CoS5uZLdIcBShBysHJaF5AMN" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
                <article class="card">
           <div class="body">
             <div class="text">
@@ -842,6 +860,7 @@
 
 </body>
 </html>
+
 
 
 
