--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -259,7 +259,7 @@
           <div class="body">
             <div class="text">
               <h3>Spot the Difference</h3>
-              <p>Show two almost-identical images, and students describe what’s changed—objects, colors, numbers, or positions—using full sentences. Great for target language like there is/are, prepositions, etc.</p>
+              <p>Show two almost-identical images. Students describe what’s changed using full sentences. Great for target language like there is/are, prepositions, etc.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -860,6 +860,7 @@
 
 </body>
 </html>
+
 
 
 
