--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -329,6 +329,25 @@
           </div>
         </article>
 
+
+               <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>English Auction</h3>
+              <p>A fast, flexible game: teams start with a budget (e.g., $100) and bid on “lots” like sentences, word pairs, definitions, or short paragraphs. Some lots are correct; others have mistakes. The highest bidder must explain why their lot is correct/best—or fix it on the spot if it isn’t. Award points for smart buys and clear explanations; deduct points for bad buys. Use grammar or vocabulary concepts from your current or previous units. Great for lively language practice and reasoning.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/auction-icon.png?raw=true"
+                  alt="English Auction icon"
+                  loading="lazy" decoding="async">
+              </div>
+                 <p style="color: #ff6729;" align="center"><strong>YOU WILL NEED TO CREATE YOUR OWN MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
+
                                                     <article class="card">
           <div class="body">
             <div class="text">
@@ -1639,6 +1658,7 @@
 
 </body>
 </html>
+
 
 
 
