--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -334,7 +334,7 @@
           <div class="body">
             <div class="text">
               <h3>English Auction</h3>
-              <p>A fast, flexible game: teams start with a budget (e.g., $100) and bid on “lots” like sentences, word pairs, definitions, or short paragraphs. Some lots are correct; others have mistakes. The highest bidder must explain why their lot is correct/best—or fix it on the spot if it isn’t. Award points for smart buys and clear explanations; deduct points for bad buys. Use grammar or vocabulary concepts from your current or previous units. Great for lively language practice and reasoning.</p>
+              <p>A fast, flexible game: teams start with a budget (e.g. $100) and bid on “lots” like sentences, word pairs, definitions, or short paragraphs. Some lots are correct; others have mistakes. The highest bidder must explain why their lot is correct/best—or fix it on the spot if it isn’t. Award points for smart buys and clear explanations; deduct points for bad buys. Use grammar or vocabulary concepts from your current or previous units. Great for lively language practice and reasoning.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1658,6 +1658,7 @@
 
 </body>
 </html>
+
 
 
 
