--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -713,6 +713,31 @@
           </div>
         </article>
 
+
+                         <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Convince Us 2</h3>
+              <p>Spin a prompt; students try to convince the class to adopt the idea. Run it two ways: </p>
+<ul>
+<li>Spin once so every speaker argues the same topic, then hold a quick vote for “Most Convincing” (optionally “Best Reason”/“Best Delivery”)</li>
+<li>Spin a fresh prompt for each student, have peers rate the speech 1–5 right after, and announce the top scores at the end.</li>
+</ul>
+<p> Greate for persuasive speaking and listening.</p>
+
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/convince-us2-icon.png?raw=true"
+                  alt="Convince Us 2 icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="http://outreach360-inc.github.io/games/convince-us2.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
                   <article class="card">
           <div class="body">
             <div class="text">
@@ -1658,6 +1683,7 @@
 
 </body>
 </html>
+
 
 
 
