--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -718,12 +718,7 @@
           <div class="body">
             <div class="text">
               <h3>Convince Us 2</h3>
-              <p>Spin a prompt; students try to convince the class to adopt the idea. Run it two ways: </p>
-<ul>
-<li>Spin once so every speaker argues the same topic, then hold a quick vote for “Most Convincing” (optionally “Best Reason”/“Best Delivery”)</li>
-<li>Spin a fresh prompt for each student, have peers rate the speech 1–5 right after, and announce the top scores at the end.</li>
-</ul>
-<p> Greate for persuasive speaking and listening.</p>
+             <p>Spin a prompt; students try to convince the class to adopt the idea. Every speaker argues the same topic, then the class holds a quick vote for “Most Convincing” (optionally “Best Reason”/“Best Delivery”). Alternatively, spin a fresh prompt for each student, have peers rate the speech 1–5 right after, and announce the top scores at the end. Bonus: Run a peer feedback session after playing. Great for persuasive speaking and listening.</p>
 
             </div>
             <div class="art-col">
@@ -1683,6 +1678,7 @@
 
 </body>
 </html>
+
 
 
 
