--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -559,6 +559,25 @@
             </div>
           </div>
         </article>
+
+                      <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Convince Us 1</h3>
+             <p>Spin a prompt; students try to convince the class to adopt the idea. Every speaker argues the same topic, then the class holds a quick vote for “Most Convincing” (optionally “Best Reason”/“Best Delivery”). Alternatively, spin a fresh prompt for each student, have peers rate the speech 1–5 right after, and announce the top scores at the end. Bonus: Run a peer feedback session after playing. Great for persuasive speaking and listening.</p>
+
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/convince-us1-icon.png?raw=true"
+                  alt="Convince Us 1 icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="http://outreach360-inc.github.io/games/convince-us1.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
             
       <article class="card">
           <div class="body">
@@ -1506,6 +1525,7 @@
 
 </body>
 </html>
+
 
 
 
