--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -719,7 +719,6 @@
             <div class="text">
               <h3>Convince Us 2</h3>
              <p>Spin a prompt; students try to convince the class to adopt the idea. Every speaker argues the same topic, then the class holds a quick vote for “Most Convincing” (optionally “Best Reason”/“Best Delivery”). Alternatively, spin a fresh prompt for each student, have peers rate the speech 1–5 right after, and announce the top scores at the end. Bonus: Run a peer feedback session after playing. Great for persuasive speaking and listening.</p>
-
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -729,6 +728,24 @@
                   loading="lazy" decoding="async">
               </div>
               <a href="http://outreach360-inc.github.io/games/convince-us2.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
+                                <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Apples to Apples</h3>
+              <p>Spin for a set of cards. Each student picks a red card they think fits best with the green card. One judge chooses the funniest or most fitting! Use the shared set of cards or give students the link to the game to spin their own set of red cards (and ignore the green one). For a twist, assign red cards and have students defend them—even if they don’t fit! Great for vocabulary and persuasive language!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/apples-icon.png?raw=true"
+                  alt="Apples to Apples icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="http://outreach360-inc.github.io/games/apples.html" target="_blank"><button class="play-btn">PLAY</button></a>
             </div>
           </div>
         </article>
@@ -770,25 +787,24 @@
           </div>
         </article>
 
-                    <article class="card">
+
+      <article class="card">
           <div class="body">
             <div class="text">
-              <h3>Apples to Apples</h3>
-              <p>Spin for a set of cards. Each student picks a red card they think fits best with the green card. One judge chooses the funniest or most fitting! Use the shared set of cards or give students the link to the game to spin their own set of red cards (and ignore the green one). For a twist, assign red cards and have students defend them—even if they don’t fit! Great for vocabulary and persuasive language!</p>
+              <h3>Speed Networking</h3>
+              <p>A fast speaking game: Spin for a prompt. Students meet in pairs for 90–120 seconds to answer it. Each partner shares, asks one follow-up, then you say “Next!” and switch to a new pair/partner. Great for small talk and interview skills, active listening, and speaking test prep. </p>
             </div>
             <div class="art-col">
               <div class="art-frame">
                 <img
-                  src="https://github.com/Outreach360-Inc/games/blob/main/apples-icon.png?raw=true"
-                  alt="Apples to Apples icon"
+                  src="https://github.com/Outreach360-Inc/games/blob/main/speed-networking-icon.png?raw=true"
+                  alt="Speed Networking icon"
                   loading="lazy" decoding="async">
               </div>
-              <a href="http://outreach360-inc.github.io/games/apples.html" target="_blank"><button class="play-btn">PLAY</button></a>
+              <a href="https://outreach360-inc.github.io/games/speed-networking.html" target="_blank"><button class="play-btn">PLAY</button></a>
             </div>
           </div>
         </article>
-
-
 
       <article class="card">
           <div class="body">
@@ -1678,6 +1694,7 @@
 
 </body>
 </html>
+
 
 
 
