--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -732,6 +732,24 @@
           </div>
         </article>
 
+                   <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Survival Picks</h3>
+              <p>Spin a survival scenario. Teams of 2 discuss in chat for a time you choose (e.g., 2 minutes), then pick a 2-item combo and explain how it helps. A judge (teacher) gives points for clear reasons and good fit. Higher score wins the round—spin and play another—add up total points at the end. Great for quick writing/speaking, problem-solving, and teamwork.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/survival-picks-icon.png?raw=true"
+                  alt="Survival Picks icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="http://outreach360-inc.github.io/games/survival-picks.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
                                 <article class="card">
           <div class="body">
             <div class="text">
@@ -1694,6 +1712,7 @@
 
 </body>
 </html>
+
 
 
 
