--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -736,7 +736,7 @@
           <div class="body">
             <div class="text">
               <h3>Survival Picks</h3>
-              <p>Spin to reveal a survival scenario. In pairs, students discuss in the chat for a teacher-set time (e.g., 2 minutes), choose a two-item combo, and explain how it helps. The teacher awards points for clear reasons and a good match to the scenario. Higher score wins the round—spin again and keep a running total. Great for quick writing/speaking, problem-solving, and teamwork.</p>
+              <p>Spin to reveal a survival scenario. In pairs, students discuss in the chat for a teacher-set time (e.g., 2 minutes), choose a two-item combo, and explain how it helps. The teacher awards points for clear reasons and a good match to the scenario. Higher score wins the round—spin again and keep a running total. <strong>Students will need to be co-hosts to send each other chat messages.</strong> Great for quick writing/speaking, problem-solving, and teamwork.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1712,6 +1712,7 @@
 
 </body>
 </html>
+
 
 
 
