--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -736,7 +736,8 @@
           <div class="body">
             <div class="text">
               <h3>Survival Picks</h3>
-              <p>Spin to reveal a survival scenario. In pairs, students have a teacher-set time (e.g., 2 minutes) to discuss and choose a two-item combo. When time is up, each team explains how their combo helps. The teacher awards points for clear reasons and good fit. Higher score wins the round—spin again and track totals. <strong>Students will need to be co-hosts to send each other chat messages.</strong> Great for quick writing/speaking, problem-solving, and teamwork.</p>
+              <p>Spin to reveal a survival scenario. In pairs, students have a teacher-set time (e.g., 2 minutes) to discuss and choose a two-item combo. When time is up, each team explains how their combo helps. The teacher awards points for clear reasons and good fit. Higher score wins the round—spin again and track totals. Great for quick writing/speaking, problem-solving, and teamwork.</p>
+                  <br><p><strong>Students will need to be co-hosts to send each other chat messages.</strong></p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1712,6 +1713,7 @@
 
 </body>
 </html>
+
 
 
 
