--- a/word-board-bingo.html
+++ b/word-board-bingo.html
@@ -75,7 +75,7 @@ background: #c2f5f0
 
 <body>
   <h1>Word Board Bingo</h1>
-  <button id="print-btn">Save Your Work</button>
+  <button id="print-btn">💾 Save Your Work</button>
   <p style="font-size: 14px; margin-top: 6px;"><em>Your bingo board will appear on page 1. Your answers will be listed on page 2 and beyond.</em></p>
 
   <div class="board-container" id="bingo-board"></div>
