--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -198,6 +198,24 @@
             </div>
           </div>
         </article>
+
+                     <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Word Board Bingo</h3>
+              <p>A Bingo game you can play with random cards from the Outreach360 Word Board. Students fill in each space's textbox with the relevant word that appeared. Great for vocabulary and grammar. <strong>Best suited for Hand in Hand 3 or higher.</strong></p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/bingo-icon.png?raw=true"
+                  alt="Word Board Bingo icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-inc.github.io/games/word-board-bingo.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
        
         <article class="card">
           <div class="body">
@@ -860,6 +878,7 @@
 
 </body>
 </html>
+
 
 
 
