--- a/game-zone-hh5-6.html
+++ b/game-zone-hh5-6.html
@@ -199,6 +199,24 @@
             </div>
           </div>
         </article>
+
+              <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Word Board Bingo</h3>
+              <p>A Bingo game you can play with random cards from the Outreach360 Word Board. Students fill in each space's textbox with a <strong>full sentence</strong> using the relevant word that appeared. <strong>Bonus: Have students conjugate verbs in different tenses.</strong> Great for vocabulary and grammar review.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/bingo-icon.png?raw=true"
+                  alt="Word Board Bingo icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-inc.github.io/games/word-board-bingo.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
        
         <article class="card">
           <div class="body">
@@ -1064,6 +1082,7 @@
 
 </body>
 </html>
+
 
 
 
