--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -203,7 +203,7 @@
           <div class="body">
             <div class="text">
               <h3>Word Board Bingo</h3>
-              <p>A Bingo game you can play with random cards from the Outreach360 Word Board. Students fill in each space's textbox with the relevant word that appeared. Great for vocabulary and grammar review. <strong>Best suited for Hand in Hand 3-4.</strong></p>
+              <p>A Bingo game you can play with random cards from the Outreach360 Word Board. Students fill in each space's textbox with a <strong>full sentence</strong> using the relevant word that appeared. Each time the page loads, it generates a unique, randomized board so students get their own version. Great for vocabulary and grammar review. <strong>Best suited for Hand in Hand 3-4, but you can adapt for lower levels by playing as a group.</strong></p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -878,6 +878,7 @@
 
 </body>
 </html>
+
 
 
 
