--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -178,6 +178,24 @@
             </div>
           </div>
         </article>
+
+               <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Word Board Bingo</h3>
+              <p>A Bingo game you can play with random cards from the <a href="https://outreach360-wordboard.netlify.app" target="_blank">Outreach360 Word Board</a>. Students fill in each space's text box with a <strong>full sentence</strong> using the relevant word that appeared. <strong>Bonus: Have students conjugate verbs in different tenses.</strong> Each time the page loads, it generates a unique, randomized board so students get their own version. Great for vocabulary and grammar review.<strong>Best suited for Oxford Discover 1-3 and English Link.</strong></p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/bingo-icon.png?raw=true"
+                  alt="Word Board Bingo icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-inc.github.io/games/word-board-bingo.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
        
         <article class="card">
           <div class="body">
@@ -1525,6 +1543,7 @@
 
 </body>
 </html>
+
 
 
 
