--- a/game-zone-hh5-6.html
+++ b/game-zone-hh5-6.html
@@ -204,7 +204,7 @@
           <div class="body">
             <div class="text">
               <h3>Word Board Bingo</h3>
-              <p>A Bingo game you can play with random cards from the <a href="https://outreach360-wordboard.netlify.app" target="_blank">Outreach360 Word Board</a>. Students fill in each space's text box with a <strong>full sentence</strong> using the relevant word that appeared. <strong>Bonus: Have students conjugate verbs in different tenses.</strong> Each time the page loads, it generates a unique, randomized board so students get their own version. Great for vocabulary and grammar review.</p>
+              <p>A Bingo game you can play with random cards from the <a href="https://outreach360-wordboard.netlify.app" target="_blank">Outreach360 Word Board</a>. Students fill in each space's text box with a <strong>full sentence</strong> using the relevant word that appeared. <strong>Bonus: Have students conjugate verbs in different tenses. Challenge them to use comparatives, adverbs of frequency, modals, etc.</strong> Each time the page loads, it generates a unique, randomized board so students get their own version. Great for vocabulary and grammar review.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1082,6 +1082,7 @@
 
 </body>
 </html>
+
 
 
 
