--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -183,7 +183,7 @@
           <div class="body">
             <div class="text">
               <h3>Word Board Bingo</h3>
-              <p>A Bingo game you can play with random cards from the <a href="https://outreach360-wordboard.netlify.app" target="_blank">Outreach360 Word Board</a>. Students fill in each space's text box with a <strong>full sentence</strong> using the relevant word that appeared. <strong>Bonus: Challenge students to conjugate verbs in different tenses, use comparatives, adverbs of frequency, modals, ed/ing adjectives, conditionals, etc.</strong> Each time the page loads, it generates a unique, randomized board so students get their own version. Great for vocabulary and grammar review.<strong> Best suited for Oxford Discover 1-3 and English Link.</strong></p>
+              <p>A Bingo game you can play with random cards from the <a href="https://outreach360-wordboard.netlify.app" target="_blank">Outreach360 Word Board</a>. Students fill in each space's text box with a <strong>full sentence</strong> using the relevant word that appeared. <strong>Bonus: Challenge students to conjugate verbs in different tenses, write questions or use comparatives, adverbs of frequency, modals, ed/ing adjectives, conditionals, used to, etc.</strong> Each time the page loads, it generates a unique, randomized board so students get their own version. Great for vocabulary and grammar review.<strong> Best suited for Oxford Discover 1-3 and English Link.</strong></p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1543,6 +1543,7 @@
 
 </body>
 </html>
+
 
 
 
