--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -330,6 +330,26 @@
         </article>
 
 
+            
+                                <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Emoji Story</h3>
+              <p>Spin for an emoji sequence. As a group, students tell a story that matches. Great for speaking, writing, and creativity. </p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/emoji-story-icon.png?raw=true"
+                  alt="Emoji Story icon"
+                  loading="lazy" decoding="async">
+              </div>
+                             <a href="https://outreach360-inc.github.io/games/emoji-story.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
+
                                 <article class="card">
           <div class="body">
             <div class="text">
@@ -348,7 +368,7 @@
           </div>
         </article>
 
-            
+
         <article class="card">
           <div class="body">
             <div class="text">
@@ -878,6 +898,7 @@
 
 </body>
 </html>
+
 
 
 
