--- a/game-zone-hh5-6.html
+++ b/game-zone-hh5-6.html
@@ -293,6 +293,24 @@
           </div>
         </article>
 
+               <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Emoji Story</h3>
+              <p>Spin for an emoji sequence. Students tell a story that matches individually or as a group. Great for speaking, writing, and creativity. </p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/emoji-story-icon.png?raw=true"
+                  alt="Emoji Story icon"
+                  loading="lazy" decoding="async">
+              </div>
+                             <a href="https://outreach360-inc.github.io/games/emoji-story.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
             
                                   <article class="card">
           <div class="body">
@@ -1082,6 +1100,7 @@
 
 </body>
 </html>
+
 
 
 
