--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -914,6 +914,25 @@
         </article>
 
 
+                <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Grammar Karaoke</h3>
+              <p>Play an appropriate song. After listening, students rewrite the song, changing the tense(s). Then they sing or say it. Great for grammar and listening. </p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/grammar-karaoke-icon.png?raw=true"
+                  alt="Grammar Karaoke icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <p style="color: #ff6729;" align="center"><strong>YOU WILL NEED TO FIND YOUR OWN MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
+
+
       <article class="card">
           <div class="body">
             <div class="text">
@@ -1579,6 +1598,7 @@
 
 </body>
 </html>
+
 
 
 
